--- a/src/main/resources/Fxml/Client/ClientMenuView/InserimentoDatiPagamento.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/InserimentoDatiPagamento.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="contenitoreDatiPagamento" fx:id="contenitoreDatiPagamento" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../Styles/inserimentoDatiPagamento.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.InserimentoDatiPagamentoController">
+<AnchorPane id="contenitoreDatiPagamento" fx:id="contenitoreDatiPagamento" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background_chiaro" stylesheets="@../../../Styles/inserimentoDatiPagamento.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.InserimentoDatiPagamentoController">
    <children>
       <VBox AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
          <children>
