--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataSelezioneAbbonamento.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataSelezioneAbbonamento.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="contenitoreSelezioneAbbonamento" fx:id="anchorPaneContenitore" prefHeight="500.0" prefWidth="1020.0" stylesheets="@../../../Styles/bannerSelezioneStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataSelezioneAbbonamentoController">
+<AnchorPane id="contenitoreSelezioneAbbonamento" fx:id="anchorPaneContenitore" prefHeight="500.0" prefWidth="1020.0" styleClass="background_chiaro" stylesheets="@../../../Styles/bannerSelezioneStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.SchermataSelezioneAbbonamentoController">
    <children>
       <VBox maxHeight="500.0" maxWidth="1020.0" minHeight="500.0" minWidth="1020.0">
          <children>
             <Label id="titoloPaginaSelezioneAbbonamento" alignment="CENTER" contentDisplay="CENTER" prefHeight="36.0" prefWidth="1026.0" text="Seleziona un abbonamento" />
             <ScrollPane id="scrollPaneAbbonamenti" pannable="true">
                <content>
-                  <VBox id="contenitoreAbbonamenti" fx:id="contenitoreAbbonamenti" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                  <VBox id="contenitoreAbbonamenti" fx:id="contenitoreAbbonamenti" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </content>
             </ScrollPane>
          </children>
