--- a/src/main/resources/Fxml/Client/ModificaDati.fxml
+++ b/src/main/resources/Fxml/Client/ModificaDati.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="contenitorePaginaModificaDati" prefHeight="600.0" prefWidth="900.0" stylesheets="@../../Styles/modificaDati.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ModificaDatiController">
+<AnchorPane id="contenitorePaginaModificaDati" prefHeight="600.0" prefWidth="900.0" styleClass="background_chiaro" stylesheets="@../../Styles/modificaDati.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ModificaDatiController">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
          <children>
