--- a/src/main/resources/Styles/login.css
+++ b/src/main/resources/Styles/login.css
@@ -1,58 +1,26 @@
-.right_side_pane{
-    -fx-background-image: url("../Images/background_login_form.png")
-}
+
 
 
 .input_login{
-    -fx-background-color: transparent;
-    -fx-border-color: transparent transparent #27374d transparent;
     -fx-border-width: 0 0 1.5 0;
-    -fx-text-fill: #27374d;
     -fx-font-size: 1.0em;
     -fx-pref-height: 38;
 }
 
 .my_button_login {
-    -fx-background-color: #27374d;
     -fx-opacity:0.9;
-    -fx-text-fill: #dde6ed;
     -fx-font-size: 1.0em;
     -fx-font-weight: bold;
     -fx-font-family: "Arial";
-    -fx-border-color: #27374d;
-    -fx-border-radius: 30px;
-    -fx-background-radius: 30px;
-    -fx-padding: 10px 30px;
-    -fx-min-width: 200px;
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-padding: 10 30;
+    -fx-min-width: 200;
 }
 
-.my_button_login:hover {
-    -fx-cursor: hand;
-    -fx-opacity:1;
-}
 
-.my_button_google {
-    -fx-background-color: #dde6ed;
-    -fx-text-fill: #27374d;
-    -fx-font-size: 1.0em;
-    -fx-font-weight: bold;
-    -fx-font-family: "Arial";
-    -fx-background-radius: 30px;
-    -fx-padding: 10px 30px;
-    -fx-min-width: 200px;
-}
 
-.my_button_toggle_pasword {
-    -fx-background-color: transparent;
-    -fx-cursor: hand;
-}
 
 .text_login{
-    -fx-text-fill: #27374D;
     -fx-fill-width: bold;
-    -fx-fill:#27374D;
-}
-
-#sfondo_login{
-    -fx-background-color: white;
 }
